Show white space correctly in result window.

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -281,6 +281,7 @@ i.icon {
   font-size: 14px;
   font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
   text-rendering: optimizeLegibility;
+  white-space: pre;
 }
 
 .liblist {
